# xolmis

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
bench/: run_delta.sh  run_delta_direct.sh  run_delta_xolmis.sh
src/: main.rs  rules.rs  transform.rs
src/ansi/: README.md  iterator.rs  mod.rs
tests/: integration.rs
