[package]
name = "xolmis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ... other dependencies if you have them ...
pty-process = "0.5"
regex = "1"
nix = { version = "0.29", features = ["term"] }
terminal_size = "0.3"
