[package]
name = "xolmis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ... other dependencies if you have them ...
pty-process = "0.5"
regex = "1"
nix = { version = "0.29", features = ["term"] }
terminal_size = "0.3"
# Add dependencies needed by src/ansi/iterator.rs
anstyle-parse = "0.2"
ansi_term = "0.12"
# Dependencies needed by src/ansi/mod.rs utility functions
itertools = "0.13" # Using recent versions
unicode-segmentation = "1.11"
unicode-width = "0.1"
# Dependencies for streaming UTF-8 decoding
encoding_rs = "0.8"
encoding_rs_io = "0.1"
lazy_static = "1.4.0"
signal-hook = "0.3"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
console = "0.15"
